--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "hackathon-starter",
+  "name": "hackathon-starter-ejs",
   "version": "0.0.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sahat/hackathon-starter.git"
+    "url": "https://github.com/wtfaremyinitials/hackathon-starter-ejs.git"
   },
   "scripts": {
     "start": "node app.js",
@@ -22,7 +22,8 @@
     "express-validator": "~1.0.1",
     "fbgraph": "~0.2.9",
     "github-api": "~0.7.0",
-    "jade": "~1.3.0",
+    "ejs": "*",
+    "ejs-locals": "1.0.2",
     "lastfm": "~0.9.0",
     "less": "~1.7.0",
     "mongoose": "~3.8.7",
